--- a/templates/userPanel.html
+++ b/templates/userPanel.html
@@ -18,14 +18,17 @@
             <h3>Your Conversations</h3>
             <ul class="list-group" id="conversationsUl">
                 {% for conversation in conversations %}
-                    <a href="http://localhost:8501?conversation_id={{ conversation._id }}" class="list-group-item list-group-item-action">
-                        <strong>Database Type:</strong> {{ conversation.db_type }}<br>
-                        <strong>Host:</strong> {{ conversation.host }}<br>
-                        <strong>Port:</strong> {{ conversation.port }}<br>
-                        <strong>User:</strong> {{ conversation.user }}<br>
-                        <strong>Database:</strong> {{ conversation.database }}<br>
-                        <strong>Timestamp:</strong> {{ conversation.timestamp }}
-                    </a>
+                    <li class="list-group-item">
+                        <a href="http://localhost:8501?conversation_id={{ conversation._id }}" class="list-group-item-action">
+                            <strong>Database Type:</strong> {{ conversation.db_type }}<br>
+                            <strong>Host:</strong> {{ conversation.host }}<br>
+                            <strong>Port:</strong> {{ conversation.port }}<br>
+                            <strong>User:</strong> {{ conversation.user }}<br>
+                            <strong>Database:</strong> {{ conversation.database }}<br>
+                            <strong>Timestamp:</strong> {{ conversation.timestamp }}
+                        </a>
+                        <button class="btn btn-danger btn-sm float-right delete-conversation" data-id="{{ conversation._id }}">Delete</button>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
@@ -105,6 +108,23 @@
                         alert('Error: ' + response.message);
                     }
                 });
+            });
+
+            $('.delete-conversation').click(function() {
+                var conversationId = $(this).data('id');
+                if (confirm('Are you sure you want to delete this conversation?')) {
+                    $.ajax({
+                        url: '/conversation/' + conversationId,
+                        type: 'DELETE',
+                        success: function(response) {
+                            if (response.success) {
+                                location.reload();
+                            } else {
+                                alert('Error: ' + response.message);
+                            }
+                        }
+                    });
+                }
             });
         });
     </script>
