--- a/templates/userPanel.html
+++ b/templates/userPanel.html
@@ -18,17 +18,18 @@
             <h3>Your Conversations</h3>
             <ul class="list-group" id="conversationsUl">
                 {% for conversation in conversations %}
+                <a href="http://localhost:8501?conversation_id={{ conversation._id }}" class="list-group-item-action">
                     <li class="list-group-item">
-                        <a href="http://localhost:8501?conversation_id={{ conversation._id }}" class="list-group-item-action">
                             <strong>Database Type:</strong> {{ conversation.db_type }}<br>
                             <strong>Host:</strong> {{ conversation.host }}<br>
                             <strong>Port:</strong> {{ conversation.port }}<br>
                             <strong>User:</strong> {{ conversation.user }}<br>
                             <strong>Database:</strong> {{ conversation.database }}<br>
                             <strong>Timestamp:</strong> {{ conversation.timestamp }}
-                        </a>
+                        
                         <button class="btn btn-danger btn-sm float-right delete-conversation" data-id="{{ conversation._id }}">Delete</button>
                     </li>
+                </a>
                 {% endfor %}
             </ul>
         </div>
@@ -103,6 +104,7 @@
                 var formData = $('#addConversationForm').serialize();
                 $.post('/conversation', formData, function(response) {
                     if (response.success) {
+                        location.reload();
                         window.location.href = response.redirect_url;
                     } else {
                         alert('Error: ' + response.message);
