--- a/templates/userPanel.html
+++ b/templates/userPanel.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>User Panel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="/static/css/userPanelStyle.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -29,7 +31,6 @@
                         </a>
                         <button class="btn btn-danger btn-sm float-right delete-conversation" data-id="{{ conversation._id }}">Delete</button>
                     </li>
-                
                 {% endfor %}
             </ul>
         </div>
@@ -50,11 +51,15 @@
                         <div class="form-group">
                             <label for="dbType">Database Type</label>
                             <select id="dbType" name="dbType" class="form-control">
-                                <option value="">Select a database</option>
+                                <option value="">Select a data source</option>
                                 <option value="MySQL">MySQL</option>
                                 <option value="PostgreSQL">PostgreSQL</option>
                                 <option value="SQLite">SQLite</option>
                                 <option value="SQLServer">SQL Server</option>
+                                <option value="SQLServer">CSV file</option>
+                                <option value="SQLServer">XLXS file</option>
+                                <option value="SQLServer">PDF file</option>
+                                <option value="SQLServer">Text file</option>
                                 <!-- Add other database types as needed -->
                             </select>
                         </div>
@@ -90,45 +95,6 @@
         </div>
     </div>
 
-    <script>
-        $(document).ready(function() {
-            $('#dbType').change(function() {
-                if ($(this).val() === "MySQL" || $(this).val() === "PostgreSQL" || $(this).val() === "SQLite" || $(this).val() === "SQLServer") {
-                    $('#dbFields').show();
-                } else {
-                    $('#dbFields').hide();
-                }
-            });
-    
-            $('#saveConversationBtn').click(function() {
-                var formData = $('#addConversationForm').serialize();
-                $.post('/conversation', formData, function(response) {
-                    if (response.success) {
-                        location.reload();
-                        window.location.href = response.redirect_url;
-                    } else {
-                        alert('Error: ' + response.message);
-                    }
-                });
-            });
-
-            $('.delete-conversation').click(function() {
-                var conversationId = $(this).data('id');
-                if (confirm('Are you sure you want to delete this conversation?')) {
-                    $.ajax({
-                        url: '/conversation/' + conversationId,
-                        type: 'DELETE',
-                        success: function(response) {
-                            if (response.success) {
-                                location.reload();
-                            } else {
-                                alert('Error: ' + response.message);
-                            }
-                        }
-                    });
-                }
-            });
-        });
-    </script>
+    <script src="/static/js/userPanel.js"></script>
 </body>
 </html>
